Add API endpoint to create a device
