# apps/ex_nvr_web/lib/ex_nvr_web/controllers/api/device_json.ex
@@ -1,0 +1,9 @@
+defmodule ExNVRWeb.API.DeviceJSON do
+  @moduledoc false
+
+  def show(%{device: device}) do
+    device
+    |> Map.take([:id, :name, :type])
+    |> Map.merge(Map.from_struct(device.ip_camera_config))
+  end
+end
